test/sematest/valid/return_missing_on_path.java
class A {
  public static void main(String[] args) {

  }

  public void a(){
    if (3 == 4){
      return;
    } else {

    }
  }
}