test/sematest/invalid/InvalidEquations.java

class InvalidEquations {

	
	public static void main(String[] args) {
		
		if(true > false)
		{
			
		}
		else if(12)
		{
			
		}		
	}
	
}
